--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,8 @@ packages = [{include = "repl_nix_jovian_careers_website"}]
 [tool.poetry.dependencies]
 python = "^3.10"
 flask = "^3.0.2"
+sqlalchemy = "^2.0.29"
+cloud-sql-python-connector = "^1.8.0"
 
 
 [build-system]
